--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     
 	<meta name="format-detection" content="telephone=yes"/>
-	<!-- <meta name="HandheldFriendly" content="true"/> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+	<meta name="HandheldFriendly" content="true"/> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	
 	<meta name="description" content="Content Delivery Network or CDN for Uikit 2.27.5">
 	<meta name="keywords" content="cdn, content delivery network, uikit2, uikit, uikit cdn"/>
